--- a/web-app/index.html
+++ b/web-app/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello World Samuel</h1>
         <p>This is version 2</p>
     </body>
 
